<resources>
    <string name="app_name">Newvivamacho</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_chat">チャット</string>
    <string name="menu_graph">グラフ</string>
    <string name="menu_tools">Tools</string>
    <string name="menu_share">Share</string>
    <string name="menu_send">Send</string>
    <string name="menu_main">自重トレーニング</string>
    <string name="menu_hand">ダンベルトレーニング</string>
    <string name="menu_weight">バーベルトレーニング</string>
    <string name="menu_machine">マシントレーニング</string>
    <string name="menu_traning">トレーニング</string>
</resources>
