<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_home"
            android:icon="@drawable/ic_schedule_black_24dp"
            android:title="スケジュール" />
        <item
            android:id="@+id/nav_gallery"
            android:icon="@drawable/ic_chat_black_24dp"
            android:title="@string/menu_chat" />
        <item
            android:id="@+id/nav_slideshow"
            android:icon="@drawable/ic_timeline_black_24dp"
            android:title="@string/menu_graph" />
        <item
            android:id="@+id/nav_tools"
            android:icon="@drawable/ic_menu_manage"
            android:title="@string/menu_tools" />
    </group>

    <item android:title="Communicate">
        <menu>
            <item
                android:id="@+id/nav_share"
                android:icon="@drawable/ic_menu_share"
                android:title="@string/menu_share" />
            <item
                android:id="@+id/nav_send"
                android:icon="@drawable/ic_menu_send"

                android:title="@string/menu_send" />
        </menu>
    </item>
    <item android:title="training">
        <menu>
            <item
            android:id="@+id/nav_mine"
            android:icon="@mipmap/mine"
            android:title="@string/menu_main" />

            <item
                android:id="@+id/nav_hand"
                android:icon="@mipmap/hand"
                android:title="@string/menu_hand" />
            <item
                android:id="@+id/nav_weight"
                android:icon="@drawable/ic_fitness_center_black_24dp"
                android:title="@string/menu_weight" />


            <item
                android:id="@+id/nav_machine"
                android:icon="@mipmap/runmachine"
                android:title="@string/menu_machine" />


        </menu>
    </item>
</menu>
