<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/nav_home">

    <fragment
        android:id="@+id/nav_home"
        android:name="com.example.newvivamacho.ui.home.HomeFragment"
        android:label="@string/menu_home"
        tools:layout="@layout/fragment_home" />

    <fragment
        android:id="@+id/nav_chat"
        android:name="com.example.newvivamacho.ui.chat.ChatFragment"
        android:label="@string/menu_chat"
        tools:layout="@layout/fragment_chat" />

    <fragment
        android:id="@+id/nav_graph"
        android:name="com.example.newvivamacho.ui.graph.GraphFragment"
        android:label="@string/menu_graph"
        tools:layout="@layout/fragment_graph" />

    <fragment
        android:id="@+id/nav_menu"
        android:name="com.example.newvivamacho.ui.menu.MenuFragment"
        android:label="筋トレメニュー"
        tools:layout="@layout/fragment_menu" />


</navigation>